# omniverse-mcp

./: .gitignore  .mcp.json  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: AI_GUIDE.md  ARCHITECTURE.md  TOOLS.md
extension/config/: extension.toml
extension/docs/: README.md
extension/isaacsim.mcp.bridge-1.0.0/docs/: README.md
extension/isaacsim.mcp.bridge-1.0.0/isaacsim/mcp/bridge/: extension.py  formatter.py  handlers.py
extension/isaacsim.mcp.bridge-1.0.0/isaacsim/mcp/bridge/handlers/: __init__.py  _mcp_bridge.py  _utils.py  camera.py  logging.py  misc.py  recording.py  robot.py  scene.py  simulation.py  usd_advanced.py
extension/isaacsim/mcp/bridge/: extension.py  handlers.py
isaac_sim_mcp/: __main__.py  client.py  server.py
isaac_sim_mcp/tools/: __init__.py  camera.py  misc.py  recording.py  robot.py  scene.py  simulation.py  usd_advanced.py
test_project/: CLAUDE.md  scenarios.md
tests/: test_client.py  test_integration.py  test_scenarios.py
